Project

General

Profile

Actions

Bug #19748

closed

`String#byteindex` crashes when `offset` is too large

Bug #19748: `String#byteindex` crashes when `offset` is too large

Added by nobu (Nobuyoshi Nakada) almost 3 years ago. Updated almost 3 years ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:114034]

Description

"a".byteindex("", 1000000) #=> [BUG] Segmentation fault

Updated by nobu (Nobuyoshi Nakada) almost 3 years ago Actions #1

  • Status changed from Open to Closed

Applied in changeset git|bc3ac1872e4523334e3ed04c2bb70a55c4c43f98.


[Bug #19748] Fix out-of-bound access in String#byteindex

Updated by nagachika (Tomoyuki Chikanaga) almost 3 years ago Actions #2 [ruby-core:114266]

  • Backport changed from 3.0: DONTNEED, 3.1: DONTNEED, 3.2: REQUIRED to 3.0: DONTNEED, 3.1: DONTNEED, 3.2: DONE

ruby_3_2 65d294ad019c8ac5bba12e2c9098360bacafc9e3 merged revision(s) bc3ac1872e4523334e3ed04c2bb70a55c4c43f98.

Actions

Also available in: PDF Atom