[Bug #19748] Fix out-of-bound access in `String#byteindex`